tests/default/default-fail04.stderr
default-fail04.hs:8:9: error: [GHC-73993]
    • ‘C’ is not a unary constraint, as expected by a `default' declaration
    • When checking the class at the head of a named default declaration

